--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies / build
 node_modules
 dist
 dist-ssr
 *.local
+
+# Vite cache
+.vite
+
+# Environment files
+.env
+.env.*
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +30,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Yarn Berry (Plug'n'Play)
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
